--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,20 @@
 		"topics":[
 			"agent/asr/final",
 			"agent/asr/intermediate"
-			"trial"
 		],
-		"1": {
-			"playername":"P000421",
-			"component_name": "UTTERANCE_TEXT_1"
-		},
-		"2":{
-			"playername":"P000422",
-			"component_name": "UTTERANCE_TEXT_2"
-		},
-		"3":{
-			"playername":"P000423",
-			"component_name": "UTTERANCE_TEXT_3"
-		}
+		"components": [
+			"UTTERANCE_TEXT_1",
+			"UTTERANCE_TEXT_2",
+			"UTTERANCE_TEXT_3"
+		]
+	},
+	"TrialWidget":{
+		"topics":[
+		],
+		"components":[
+			"START_TRIAL",
+			"STOP_TRIAL"
+		]
 	},
 	"ScoreWidget":{
 		"topics":[
