--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,12 @@
 {
+	"Menu":
+	{
+		"components":{
+			"trial_button": "TRIAL_BUTTON",
+			"asr_button" : "ASR_BUTTON",
+			"score_button" : "SCORE_BUTTON"
+		}
+	},
 	"ASRWidget":
 	{
 		"topics":[
@@ -18,9 +26,13 @@
 		]
 	},
 	"ScoreWidget":{
-		"topics":[
-			"observations/events/scoreboard"
+		 "topics":[
+                	"chart_test"
 		],
+		"x_axis_field": "Time",
+		"x_axis_label": "Time",
+		"y_axis_field": "Score",
+		"y_axis_label": "Score",
 		"panel_name": "SCORE_PANEL"
 	}
 }
