Visualization mode switching and generalized charting (#10)
* Prototype for switching between tabs

* Adding missing TrialWidget updates

* Fixing timeout bug in mosquitto clients

* Removing unused template files

* Updating README.md

* Switching references from ScoreWidget to ChartWidget

* Removing ScoreWidget

* Updating README

* Running clang-format

Co-authored-by: Vincent Raymond <vraymond6@arizona.edu>

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,19 @@
 {
+	"Menu":
+	{
+		"components":{
+			"trial_button": "TRIAL_BUTTON",
+			"asr_button" : "ASR_BUTTON",
+			"score_button" : "SCORE_BUTTON"
+		}
+	},
 	"ASRWidget":
 	{
 		"topics":[
 			"agent/asr/final"
 		],
 		"components": {
-			"wxTextCtrl":"UTTERANCE_TEXT"
+			"wxRichTextCtrl":"UTTERANCE_TEXT"
 		}
 
 	},
@@ -17,10 +25,14 @@
 			"STOP_TRIAL"
 		]
 	},
-	"ScoreWidget":{
-		"topics":[
-			"observations/events/scoreboard"
+	"ChartWidget":{
+		 "topics":[
+                	"score"
 		],
-		"panel_name": "SCORE_PANEL"
+		"x_axis_field": "Time",
+		"x_axis_label": "Time",
+		"y_axis_field": "Score",
+		"y_axis_label": "Score",
+		"panel_name": "CHART_PANEL"
 	}
 }
